# inspector-agent

./: .gitignore  LICENSE  README.md  doc.md  doc2.md  pyproject.toml
ios_inspector_agent/: __init__.py  cli.py  config.py
ios_inspector_agent/actions/: __init__.py  base.py  inspect.py  interact.py
ios_inspector_agent/agent/: __init__.py  loop.py
ios_inspector_agent/core/: __init__.py  client.py  errors.py  models.py  transport.py
ios_inspector_agent/llm/: __init__.py  anthropic_client.py  base.py  prompts.py  scripted.py
ios_inspector_agent/session/: __init__.py  cache.py  session.py  workdir.py
ios_inspector_agent/trace/: __init__.py  recorder.py
